syntax = "proto3";

package pb; 

import "google/protobuf/timestamp.proto";

option go_package = "github.com/kenmobility/grpc-project/pb";

message User {
    int32 user_id = 1;
    string public_id = 2;
    string email = 3;
    string full_name = 4;
    google.protobuf.Timestamp created_at = 5;
}

message CreateUserRequest {
    string email = 1;
    string full_name = 2;
    string password = 3;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

